Updated project to work with quandl

--- a/src/main/resources/META-INF/cassandra.properties
+++ b/src/main/resources/META-INF/cassandra.properties
@@ -3,4 +3,4 @@ cassandra.contactpoints=192.168.57.203
 cassandra.port=9042
 cassandra.username=cassandra
 cassandra.password=cassandra
-cassandra.keyspace=example
+cassandra.keyspace=dwproject
