--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-cassandra'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.jimmoores:quandl:1.4.1'
+    implementation 'com.jimmoores:quandl-tablesaw:2.0.0'
+    implementation 'tech.tablesaw:tablesaw-jsplot:0.30.1'
+    implementation 'org.glassfish.jersey.core:jersey-common:2.26'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:2.26'
+    implementation 'org.apache.commons:commons-csv:1.5'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
